--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Ignore working files
+docs/
+responses/
+
+# Ignore server access key
+*.pem
+
+# Mac files
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
